# Based-Personalized-Resource-Generation-and-Learning-Multi-Agent-System

./: .env.example  .gitignore  API接口文档.md  CHANGES.md  DELIVERY.txt  Dockerfile  FINAL-REPORT.md  IMPLEMENTATION-COMPLETE.md  KNOWLEDGE-RESOURCES-DELIVERY.txt  README-CHAT-SYSTEM.md  README.md  SUMMARY.md  alembic.ini  docker-compose.yml  pom.xml  pyproject.toml  start-dev.bat  start-dev.ps1  总需求文档.md
.claude/skills/: knowledge-base-rag.md  (+1 more)
alembic/: README  env.py
common/: __init__.py  config.py  cors.py  dependencies.py
docs/: DEFENSE_SCRIPT.md  IMPLEMENTATION-SUMMARY.md  KNOWLEDGE-RESOURCES-COMPLETE.md  KNOWLEDGE-RESOURCES-SUMMARY.md  QUICKSTART.md  SYSTEM_ARCHITECTURE.md  agent-main-merge-summary-reference-style.docx  agent-main-merge-summary.docx  agent-main-merge-summary.md  chat-system-guide.md  data-flow.md  functionality.md  knowledge-base-resources.md  openapi.yaml  system-full-guide.md
memory/: MEMORY.md  routing-guard-plan.md
prompts/: coordinator.md  evaluation_feedback.md  exercise_gen.md  knowledge_graph.md  learner_profile.md  path_planning.md  qa.md  resource_gen.md
scripts/: crawl_resources.py  create_tables.py  db_downgrade.py  db_upgrade.py  generate_db_er_flow_doc.py  generate_function_docs.py  index_resources.py  run_tests.ps1  start_local_services.ps1  watch_function_docs.py
services/: __init__.py
tests/: conftest.py  test_chat_api.py  test_chat_service.py
ui-demo/: README.md  dashboard.html  index.html  landing.html  login.html
web-app/: .env.example  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
(+364 files in other folders)
