[project]
name = "personalized-learning-multi-agent-system"
version = "0.1.0"
description = "Monorepo for a personalized resource generation and learning multi-agent system."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.13.2",
    "bcrypt>=4.2.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.3.0",
    "sqlalchemy>=2.0.32",
    "psycopg[binary]>=3.2.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib>=1.7.4",
    "redis>=5.0.8",
    "neo4j>=5.23.0",
    "minio>=7.2.7",
    "pika>=1.3.2",
    "elasticsearch>=8.15.0",
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-openai>=0.2.0",
    "langgraph>=0.2.34",
    "chromadb>=0.5.5",
    "httpx>=0.27.0",
    "orjson>=3.10.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
]

[tool.pytest.ini_options]
pythonpath = [
    ".",
    "services/user_service",
    "services/agent_service",
]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
